cabal-version: 2.2
name:          arbiter-servant-ui
version:       0.1.0.0
synopsis:      Embedded admin dashboard for arbiter job queue
description:
  This package provides a Bootstrap 5 + Alpine.js admin dashboard served from
  embedded static files. Users opt in by depending on this package.

license:       MIT
author:        Joshua Miller
maintainer:    joshua.ian.miller@pm.me
category:      Web
build-type:    Simple
homepage:      https://github.com/velveteer/arbiter
bug-reports:   https://github.com/velveteer/arbiter/issues

source-repository head
  type:     git
  location: https://github.com/velveteer/arbiter.git

common shared-properties
  default-language: GHC2024
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
    -Wredundant-constraints -Werror=incomplete-patterns
    -Wunused-packages -Wmissing-export-lists -Wunused-type-patterns
    -Wderiving-defaults -Wmissing-deriving-strategies
    -Wmissing-signatures

library
  import:          shared-properties
  hs-source-dirs:  src
  exposed-modules: Arbiter.Servant.UI
  build-depends:
    , arbiter-servant  <0.2
    , base             >=4.14   && <5
    , bytestring       >=0.10   && <0.13
    , file-embed       >=0.0.10 && <0.1
    , filepath         >=1.4    && <1.6
    , http-types       >=0.12   && <0.13
    , servant-server   >=0.19   && <0.21
    , text             >=1.2    && <2.2
    , wai              >=3.2    && <3.3
